Update and rename framework.html to index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h3>Settlement Site <br><br>Use average values over 1km radius around site. Leave blank if value
                         unknown.
                         The colours in the image indicate different materials.</h3>
-                    <img class="moonimage" src="images\Moon_Crescent_-_False_Color_Mosaic.jpg">
+                    <img class="moonimage" src="images/Moon_Crescent_-_False_Color_Mosaic.jpg">
 
                     <h4>Water Ice Availability</h4>
 
@@ -157,3 +157,4 @@
 </body>
 
 </html>
+
