--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h3>Settlement Site <br><br>Use average values over 1km radius around site. Leave blank if value
                         unknown.
                         The colours in the image indicate different materials.</h3>
-                    <img class="moonimage" src="images/Moon_Crescent_-_False_Color_Mosaic.jpg">
+                    <img class="moonimage" src="moon-map.jpg">
 
                     <h4>Water Ice Availability</h4>
 
@@ -127,7 +127,7 @@
                     <input type="number" id="earthToMoonTransport" name="earthToMoonTransport">
                     <p>https://www.e3s-conferences.org/articles/e3sconf/pdf/2018/24/e3sconf_solina2018_00053.pdf these
                         data are symmetric wrt the Lunar equator.</p>
-                    <img src="images/lunartable.png" style="max-width:600px" />
+                    <img src="lunartable.png" style="max-width:600px" />
 
                     <h4>Cargo Transport</h4>
 
@@ -156,5 +156,6 @@
 </body>
 
 </html>
+
 
 
